# srdedupe

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cliff.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  release-process.md
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: README.md
models/: fs_v1.json
schemas/: log_event.schema.json  run_manifest.schema.json
scripts/: qa_packaging.py
src/srdedupe/: __init__.py  api.py
src/srdedupe/audit/: __init__.py  context.py  helpers.py  logger.py  manifest.py  models.py
src/srdedupe/candidates/: __init__.py  blockers.py  factory.py  generator.py  models.py
src/srdedupe/cli/: __init__.py  main.py
src/srdedupe/clustering/: __init__.py  cluster_builder.py  consistency.py  models.py  union_find.py
src/srdedupe/decision/: __init__.py  conformal_calibration.py  models.py  np_calibration.py  policy.py  safety_gates.py
src/srdedupe/engine/: __init__.py  config.py  runner.py
src/srdedupe/merge/: __init__.py  field_merge.py  models.py  processor.py  ris_writer.py  survivor.py
src/srdedupe/models/: __init__.py  identifiers.py  records.py
src/srdedupe/normalize/: __init__.py  _helpers.py  _provenance.py  _result_types.py  flags.py  keys.py  normalizer.py  tag_mappings.py
src/srdedupe/normalize/_fields/: __init__.py  authors.py  doi.py  journal.py  other.py  pages.py  pmid.py  title.py  year.py
src/srdedupe/parse/: __init__.py  base.py  bibtex.py  endnote.py  ingestion.py  pubmed.py  ris.py  wos.py
src/srdedupe/scoring/: __init__.py  comparators.py  fs_model.py  models.py  score_pairs.py
src/srdedupe/utils/: __init__.py  hashing.py  timestamps.py
tests/: conftest.py
tests/fixtures/: README.md  golden_example.jsonl
tests/fixtures/audit/: example_events.jsonl  example_run.json
tests/fixtures/clustering/: sample_pair_decisions.jsonl
tests/fixtures/decision/: calibration_sample.jsonl
tests/fixtures/real/: mini_endnote.enw  mini_generic.ris  mini_pubmed.nbib  mini_scholar.enw  mini_scopus.bib  mini_wos.ciw
tests/fixtures/synthetic/: sample.bib  sample.ciw  sample.enw  sample.nbib  sample.ris
tests/integration/: test_conformal_integration.py  test_end_to_end_pipeline.py
tests/unit/: conftest.py  test_api.py  test_audit_context.py  test_audit_helpers.py  test_audit_logger.py  test_audit_manifest.py  test_audit_schemas.py  test_blockers.py  test_candidate_generation.py  test_cli.py  test_clustering.py  test_decision.py  test_ingestion.py  test_merge.py  test_merge_summary.py  test_mini_fixtures.py  test_normalization.py  test_orchestrator.py  test_parsers.py  test_schema.py  test_scoring.py  test_sniff_format.py
